--- a/sub.html
+++ b/sub.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Home</title>
+  <title>Subscribe</title>
   <link rel="stylesheet" href="css/master.css">
 </head>
 
@@ -21,24 +21,28 @@
 
 
   <!-- main -->
-  <div class="firstsection">
-    <h1>iMask</h1>
-    <img src="images/iMask_original.png">
-  </div>
+  <form>
+    <div class="container">
+      <h2>Subscribe to our Apple Newsletter</h2>
+      <p>Never miss an update on iMask.</p>
+    </div>
+
+    <div class="fillout">
+      <input type="text" placeholder="First Name"><br>
+      <input type="text" placeholder="Email">
+    </div>
 
 
-  <div class="secondsection">
-    <img src="images/iMask_original.png">
-    <p>Introducing the first model of iMask.</p>
-  </div>
+    <div class="submit">
+      <input type="submit" value="Subscribe">
+    </div>
+  </form>
 
-  <div class="thirdsection">
-    <p>The future is here.</p>
-  </div>
 
   <div class="footer">
     <p>Apple Products</p>
   </div>
+
 
 </body>
 
